@@ -1,3 +1,6 @@
+4-February-2012 Michael Babker
++ [#37] Add ability to override player in content plugin
+
 20-January-2012 Michael Babker
 ~ Update pt-BR translation
 
